After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662475 - oggdemux: Improvements on the push mode seeking algorithm.
oggdemux: Improvements on the push mode seeking algorithm.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 0.10.36
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-10-22 19:55 UTC by Vincent Penquerc'h
Modified: 2011-11-24 09:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
oggdemux: gather some more stats about bisection (2.54 KB, patch)
2011-10-22 19:55 UTC, Vincent Penquerc'h
committed Details | Review
oggdemux: improve push time seeking (13.61 KB, patch)
2011-10-22 19:55 UTC, Vincent Penquerc'h
committed Details | Review
oggdemux: skip the second bisection when possible (5.44 KB, patch)
2011-10-22 19:55 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-10-22 19:55:06 UTC
About 20% to 30% less seeks on average, and worst case
cut in half (at least on the samples I tried with).

Audio only always saves one seek at least.
Comment 1 Vincent Penquerc'h 2011-10-22 19:55:08 UTC
Created attachment 199733 [details] [review]
oggdemux: gather some more stats about bisection
Comment 2 Vincent Penquerc'h 2011-10-22 19:55:11 UTC
Created attachment 199734 [details] [review]
oggdemux: improve push time seeking

Various tweaks to improve convergence, in particular for
the worst case, which is now cut in about half.
Comment 3 Vincent Penquerc'h 2011-10-22 19:55:14 UTC
Created attachment 199735 [details] [review]
oggdemux: skip the second bisection when possible

If we already saw the keyframes that we need to find,
we do not need to bisect to find them.

This will always be the case for streams with audio only,
where each frame acts as a keyframe, but will occasionally
also happen for streams with video.
Comment 4 Sebastian Dröge (slomo) 2011-11-24 09:58:02 UTC
commit b0bb1d353925c935d93f37706f21d8b199505ec5
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Sat Oct 22 20:29:26 2011 +0100

    oggdemux: skip the second bisection when possible
    
    If we already saw the keyframes that we need to find,
    we do not need to bisect to find them.
    
    This will always be the case for streams with audio only,
    where each frame acts as a keyframe, but will occasionally
    also happen for streams with video.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=662475

commit e7079cd8d5a7752f8052a093ca694f9e5a070fb0
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Sat Oct 22 20:20:38 2011 +0100

    oggdemux: improve push time seeking
    
    Various tweaks to improve convergence, in particular for
    the worst case, which is now cut in about half.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=662475

commit db21375406f00db1e0791050f1b0bf576f4efd5d
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Fri Oct 21 19:38:19 2011 +0100

    oggdemux: gather some more stats about bisection
    
    https://bugzilla.gnome.org/show_bug.cgi?id=662475