oggdemux: gather some more stats about bisection

https://bugzilla.gnome.org/show_bug.cgi?id=662475